[package]

name = "Rust-OAuth"
version = "0.0.1"
authors = ["Scott Cooper <scott.cooper2@mail.mcgill.ca>"]

[dependencies.url]
git = "https://github.com/servo/rust-url.git"

# [dependencies.hyper]
# git="https://github.com/hyperium/hyper.git"

# [dependencies.url]
# git = "https://github.com/servo/rust-url"
